<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.kmcoder.maharashtrabhulekh.AppActivity.TrainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:background="@color/back_about_us">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/back_about_us"
            android:orientation="vertical"
            android:padding="10.0dip">
            <LinearLayout

            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/train_between_station"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
            <LinearLayout

                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/pnr_status"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/train_schedule"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/live_train_status"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/seat_availability"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/fair_enquiry"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/live_station_info"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/canceled_trains"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout

                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/diverted_trains"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>


                    </LinearLayout>


    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="55dp"
        android:layout_gravity="center"
        >
    </LinearLayout>

</LinearLayout>