<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
tools:context="com.kmcoder.maharashtrabhulekh.AppActivity.MainActivity">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0.0dip"
    android:layout_weight="1.0"
    android:background="@color/back_about_us">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
        android:background="@color/back_about_us"
        android:orientation="vertical"
        android:padding="10.0dip">
        <LinearLayout

            android:id="@+id/landrecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/bhulekh"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>



        <LinearLayout

            android:id="@+id/extraservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/extra_service"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/shareapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/share_application"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout

            android:id="@+id/reviewapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/rate_and_review"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout

            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button1"
                android:text="@string/update_available"
                android:visibility="invisible"

                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="55dp"
        android:layout_gravity="center"
        >
    </LinearLayout>

</LinearLayout>