<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
tools:context="com.kmcoder.maharashtrabhulekh.AppActivity.ExtraService" >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0.0dip"
    android:layout_weight="1.0"
    android:background="@color/back_about_us"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/back_about_us"
        android:orientation="vertical"
        android:padding="10.0dip">
        <LinearLayout

            android:id="@+id/adharcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button11"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/adhar_card_status"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/pancard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button22"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/pan_card_status"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/passport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button33"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/passport_status"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout

            android:id="@+id/pnr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button44"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/train_enquiryy"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>




    </LinearLayout>




</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="55dp"
        android:layout_gravity="center"
        >
    </LinearLayout>
</LinearLayout>